# TIPMAP

./: .gitignore  LICENSE  README.md  annotate_te.py  classify_te_sv.py  config.yaml  extract_sv_sequences.py  pyproject.toml  requirements.txt
scripts/: extract_panpop_alleles.py  extract_te_fragments.py  parse_edta_gff3.py
src/tipmap/: __init__.py
src/tipmap/lib/: __init__.py  fasta.py  logger.py  matcher.py  models.py  parser.py  utils.py
tests/: test_annotate_te.py  test_classify_te_sv.py  test_extract_panpop_alleles_script.py  test_extract_sv_sequences.py  test_extract_te_fragments_script.py  test_fasta.py  test_matcher.py  test_parse_edta_gff3_script.py  test_parser.py
